Populando banco de dados

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
       {
         "vars": "all",
         "args": "none",
-        "ignoreRestSiblings": false
+        "ignoreRestSiblings": false,
+        "endOfLine": "auto"
       }
     ]
   }
